test/tests/compiler/18_structures/invalid_parse/extra_credit/union_member_name_kw.plx
# Can't use a keyword as a union member name

type union u (struc: i32)
